fix test failures
For whatever reason, the jvm settings (from ye olden thymes) were
causing teh effing up.