@@ -33,7 +33,7 @@
 		<h2.version>1.4.200</h2.version>
 		<jooq.version>3.13.2</jooq.version>
 		<bc.version>1.65.01</bc.version>
-		<logback.version>1.2.3</logback.version> 
+		<logback.version>1.2.3</logback.version>
 		<asm.version>8.0.1</asm.version>
 		<antlr.version>4.8-1</antlr.version>
 		<grpc.version>1.32.1</grpc.version>
@@ -241,7 +241,7 @@
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
 				<version>1.15</version>
-			</dependency>  
+			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-dbcp2</artifactId>
@@ -332,8 +332,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<forkCount>1</forkCount>
-					<reuseForks>true</reuseForks>
-					<argLine>-Xms2048m -Xmx2048m -XX:MaxDirectMemorySize=10G</argLine>
+					<reuseForks>false</reuseForks>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -439,11 +438,6 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.0.0-M5</version>
-					<configuration>
-						<argLine>
-							--illegal-access=permit
-						</argLine>
-					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
